<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.plduncantrucking.platecalculator.MainActivity">

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="304dp"
        android:layout_height="89dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:autofillHints="Total Weight"
        android:hint="@string/edit_weight"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="168dp"
        android:layout_height="88dp"
        android:layout_marginTop="24dp"
        android:onClick="calculatePlates"
        android:text="@string/button_calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editWeight"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/XXL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label45" />

    <TextView
        android:id="@+id/label45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/fortyFive"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/XXL"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/label35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/thirtyFive"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/XL"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label45" />

    <TextView
        android:id="@+id/XL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label35" />

    <TextView
        android:id="@+id/label25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/twentyFive"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/L"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label35" />

    <TextView
        android:id="@+id/L"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label25" />

    <TextView
        android:id="@+id/M"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label10" />

    <TextView
        android:id="@+id/S"
        android:layout_width="13dp"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label5" />

    <TextView
        android:id="@+id/XS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/zero"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/label2.5"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/label10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ten"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/M"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label25" />

    <TextView
        android:id="@+id/label5"
        android:layout_width="37dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/five"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/S"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label10" />

    <TextView
        android:id="@+id/label2.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/twoPointFive"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/label5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="120dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="291dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="240dp" />

</android.support.constraint.ConstraintLayout>
